--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="overlay" data-link="https://chennaiwebsitedeveloper.com/chailoka/">
                         <div class="image-icon"><a href="https://chennaiwebsitedeveloper.com/chailoka/"
                                 target="_blank"><img src="image/Chai-logo.png" class="image-icon-img"></a>
-                        </div><a href="https://peransainfotech.com/" target="_blank"><img src="image/website01-logo.png"
+                        </div><a href="https://chennaiwebsitedeveloper.com/chailoka/" target="_blank"><img src="image/website01-logo.png"
                                 style="width: 20px;height: 20px;"></a>
                     </div>
                 </div>
@@ -346,5 +346,6 @@
 
             <script src="main.js"></script>
 </body>
+
 
 </html>
